Web Inspector: RTL: fix alignment of close button shown while docked https://bugs.webkit.org/show_bug.cgi?id=170472
Reviewed by Matt Baker.

* UserInterface/Views/Toolbar.css:
(.toolbar .control-section):
(body[dir=ltr] .toolbar .control-section):
(body[dir=rtl] .toolbar .control-section):


Canonical link: https://commits.webkit.org/187386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214902 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/Toolbar.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Toolbar.css
@@ -69,6 +69,19 @@ body.mac-platform:not(.docked) {
     padding-right: 2px;
 
     min-width: -webkit-min-content;
+
+    --toolbar-control-section-padding-start: 6px;
+    --toolbar-control-section-padding-end: 2px;
+}
+
+body[dir=ltr] .toolbar .control-section {
+    padding-left: var(--toolbar-control-section-padding-start);
+    padding-right: var(--toolbar-control-section-padding-end);
+}
+
+body[dir=rtl] .toolbar .control-section {
+    padding-left: var(--toolbar-control-section-padding-end);
+    padding-right: var(--toolbar-control-section-padding-start);
 }
 
 .toolbar:matches(.icon-and-label-horizontal.small-size, .icon-only.small-size, .label-only) .control-section {
